// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Basket/> renders properly> with  passed props 1`] = `
<div
  class="Basketstyles__Wrapper-soyk8i-0 ilJAeb"
>
  <h1
    class="Title-gs7lg-0 gPeMbJ"
  >
    Shop list
  </h1>
  <div
    class="Basketstyles__Line-soyk8i-1 kgUMYD"
  />
  <h1>
    Test string
  </h1>
</div>
`;

exports[`<Basket/> renders properly> without  props 1`] = `
<div
  class="Basketstyles__Wrapper-soyk8i-0 ilJAeb"
>
  <h1
    class="Title-gs7lg-0 gPeMbJ"
  >
    Shop list
  </h1>
  <div
    class="Basketstyles__Line-soyk8i-1 kgUMYD"
  />
</div>
`;
